# cyb3riachat

./: .gitignore  Cargo.toml  project_contents.txt  project_contents_1.txt  project_contents_2.txt  script_for_copy
.sqlx/: query-515fb5de48c0de64363b7f2bf4160d8dc9c6f935ba4490d46e6234671163caec.json  query-5cf49adf35248386fcabb73ce0ee0d59ba7decf11818119ade91808b5287e7d1.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-cf5d6b4291709180558b18930127a72c06d14214a45b7ca1d4431fca731b03a8.json  query-db6fd6ca473eee9acc02be5418692aa52b5c671d45df4fec7fad48b3d9779dae.json  query-eb73be48be9264cdf6f243ee4e8850ed649435ba68087a863645cf7f9af1415d.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 20250726200054_create_users_table.sql  20250810000001_create_users_table.sql  20250810000002_create_messages.sql  20250810000003_create_discussions.sql  20250810000004_create_comments.sql  20250810000005_add_public_key_to_users.sql  20250810000006_add_recipient_to_messages.sql  20250810000007_add_encrypted_private_key_to_users.sql
public/: index.html  main.js
public/pkg/: crypto_core.d.ts  crypto_core.js  crypto_core_bg.wasm  crypto_core_bg.wasm.d.ts  package.json
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  state.rs
src/handlers/: comment_handler.rs  discussion_handler.rs  message_handler.rs  mod.rs  user_handler.rs
src/models/: comment.rs  discussion.rs  message.rs  mod.rs  user.rs
src/routes/: comments.rs  discussions.rs  messages.rs  mod.rs  users.rs
static/: index.html  statix.css
