[package]
name = "cyb3ria"
version = "0.1.0"
edition = "2024"

[dependencies]
# Основные библиотеки
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47.0", features = ["full"] } # Tokio - асинхронный рантайм. Нужна фича "full" для всех его возможностей.
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] } # Serde - для (де)сериализации, особенно в JSON.
serde_json = "1.0.117"
log = "0.4"        # Логирование
env_logger = "0.9"  # Вывод логов в консоль
dotenvy = "0.15.7" # Dotenvy - для чтения .env файлов.
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] } # SQLx - для работы с PostgreSQL. Включаем нужный рантайм и драйвер.
tracing = "0.1.41" # Tracing - для логирования. Нужна фича "env-filter" для фильтрации логов.
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
argon2 = "0.5"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
jsonwebtoken = "9"
validator = { version = "0.16", features = ["derive"] }
time = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8"
