[package]
name = "cyb3ria"
version = "0.1.0"
edition = "2024"

[dependencies]
# Основные библиотеки
# ИЗМЕНЕНИЕ: Добавили фичу "ws" для WebSockets
axum = { version = "0.8.4", features = ["macros", "ws"] } 
tokio = { version = "1.47.0", features = ["full"] } 
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] } 
serde_json = "1.0.117"
log = "0.4"
env_logger = "0.9"
dotenvy = "0.15.7" 
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tracing = "0.1.41" 
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# ИЗМЕНЕНИЕ: Добавили фичу "fs" для раздачи файлов
tower-http = { version = "0.5.2", features = ["trace", "cors", "fs"] } 
argon2 = "0.5"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
jsonwebtoken = "9"
validator = { version = "0.16", features = ["derive"] }
time = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8"
# НОВАЯ ЗАВИСИМОСТЬ для парсинга query string в WebSocket
querystring = "1.1.0"
